<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share and Save</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">Username*</string>
    <string name="password">Password*</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_home">Share And Save</string>
    <string name="title_activity_register">Share And Save</string>
    <string name="drive_nearby">BLOOD DONATION DRIVES</string>
    <string name="emergencies">EMERGENCIES</string>
    <string name="logout">Logout</string>
    <string name="confirm_pass">Confirm</string>
    <string name="register">Register</string>
    <string name="street">Street</string>
    <string name="address">Address*</string>
    <string name="blood_group">Blood Group*</string>
    <string name="email">Email id*</string>
    <string name="view">View</string>
    <string name="respond">Respond</string>
    <string name="title_activity_setting">Share and Save</string>
    <string name="settings">Settings</string>
    <string name="push_notif">Push Notifications</string>
    <string name="addr">Address</string>
    <string name="last_don">Last donated</string>
    <string name="frequency">Frequency</string>
    <string name="months">months</string>
    <string name="distance">Distance &lt;</string>
    <string name="miles">miles</string>
    <string name="save">Save</string>

</resources>
